Update learning status and weekly review

--- a/monthly-reviews/2025-Jan.md
+++ b/monthly-reviews/2025-Jan.md
@@ -7,10 +7,10 @@
 
 ## Project Portfolio Growth
 1. [Project Name]
-   - Status
-   - Key features implemented
-   - Technical challenges solved
-   - UX improvements made
+- Status
+- Key features implemented
+- Technical challenges solved
+- UX improvements made
 
 ## Learning Resource Completion
 - Courses completed
@@ -18,6 +18,6 @@
 - Books/tutorials finished
 
 ## Next Month Planning
-1. Focus areas
-2. Project targets
-3. Learning goals
+- Focus areas
+- Project targets
+- Learning goals
