--- a/weekly-reviews/2025-Jan-W1.md
+++ b/weekly-reviews/2025-Jan-W1.md
@@ -2,12 +2,30 @@
 
 ## Weekly Objectives Review
 - TOP CSS exercises – [Completed]
+- TOP CSS project – [Completed]
 
 ## Key Learnings
-- Technical:
-  - What worked
-  - What didn't
+### CSS Selectors
+- Enhanced understanding of selectors
+  - Chain selectors (e.g., .class1.class2) target elements with all specified classes
+  - Descendant combinators (e.g., .parent .child) target nested elements
+
+### Flexbox Mode
+- Clarified axis-based alignment concepts
+  - justify-content: Controls group alignment along primary axis
+  - align-items: Positions individual items along cross axis
+- Created responsive layouts through flexbox exercises
+- Practiced layout patterns in CSS project
+
+### Additional Skills
+- Implemented Google Fonts in CSS project
+- Applied responsive design principles
 
 ## Next Week's Focus
-1. Primary focus
-2. Learning targets
+- Javascript basics
+- Media queries
+
+## Resources Used
+- TOP course
+- Google Fonts API guide
+- Josh W. Comeau's website
