Update weekly review

--- a/weekly-reviews/2025-Jan-W1.md
+++ b/weekly-reviews/2025-Jan-W1.md
@@ -22,10 +22,10 @@
 - Applied responsive design principles
 
 ## Next Week's Focus
-- Javascript basics
+- JavaScript basics
 - Media queries
 
 ## Resources Used
-- TOP course
+- TOP courses
 - Google Fonts API guide
 - Josh W. Comeau's website
