Update weekly review

--- a/weekly-reviews/2025-Jan-W2.md
+++ b/weekly-reviews/2025-Jan-W2.md
@@ -11,7 +11,7 @@
 - Explored primitive data types
 
 ### Conditionals
-- Switch vs. of-else statements
+- Switch vs. if-else statements
   - Switch statements are better for comparing a single variable against multiple fixed values.
   - If-else statements are better for evaluating multiple conditions or complex logical expressions.
 
@@ -30,6 +30,6 @@
 - JavaScript project
 
 ## Resources Used
-- TOP courses
+- TOP course
 - MDN Web Docs
 - JavaScript.info
