Update weekly and monthly review

--- a/monthly-reviews/2025-Jan.md
+++ b/monthly-reviews/2025-Jan.md
@@ -21,7 +21,7 @@
 - Focus areas
   - JavaScript arrays and loops
   - DOM manipulation
-  - Intermediate HTML and CSS
+  - Intermediate HTML & CSS
 - Project targets
   - 3 JavaScript basics projects
   - Responsive portfolio site 
