--- a/weekly-reviews/2025-Jan-W4.md
+++ b/weekly-reviews/2025-Jan-W4.md
@@ -10,7 +10,7 @@
 - Works based on last-in-first-out (LIFO) principle
 
 ### Problem Solving Framework
-- Understanding & Planning
+- Understanding & planning
   - Write problem in plain English
   - Define inputs, outputs, and algorithms
 - Dividing
