Update weekly review

--- a/weekly-reviews/Feb/2025-Feb-W2.md
+++ b/weekly-reviews/Feb/2025-Feb-W2.md
@@ -15,7 +15,7 @@
 
 ### DOM Manipulation
 - Tree-like structure representing webpage contents
-- Key methods:
+- Key methods
   - querySelector(selector)
   - createElement(tagName)
   - appendChild(childNode)
