--- a/weekly-reviews/Feb/2025-Feb-W1.md
+++ b/weekly-reviews/Feb/2025-Feb-W1.md
@@ -1,14 +1,14 @@
 # 2025 February Week 1
 
 ## Weekly Objectives Review
-- TOP first JavaScript project – [Completed]
-- TOP JavaScript arrays and loops – [Completed]
-- TOP JavaScript DOM manipulation and events – [In progress]
+- TOP first JavaScript project – Completed
+- TOP JavaScript arrays and loops – Completed
+- TOP JavaScript DOM manipulation and events – In progress
 
 ## Key Learnings
 ### Arrays
 - Arrays store ordered collections of various data types
-- const arrays can be modified (push, pop, etc.) but not reassigned
+- **const** arrays can be modified (push, pop, etc.) but not reassigned
 - Zero-based indexing for element access
 
 ### Loops
@@ -18,10 +18,10 @@
   - while: Condition checked before execution
   - do...while: Guarantees at least one execution
 - Flow control
-  - break exits loop completely
-  - continue skips to next iteration
+  - **break** exits loop completely
+  - **continue** skips to next iteration
 - Increment operators
-  - Post-increment (i++) uses then increases, pre-increment (++i) increases then uses
+  - Post-increment **i++** uses then increases, pre-increment **++i** increases then uses
   - Ensure proper increment/decrement conditions to avoid infinite loops
 
 ### Clean Code Principles
