--- a/weekly-reviews/Feb/2025-Feb-W2.md
+++ b/weekly-reviews/Feb/2025-Feb-W2.md
@@ -1,15 +1,15 @@
 # 2025 February Week 2
 
 ## Weekly Objectives Review
-- TOP JavaScript arrays and loops exercises – [Completed]
-- TOP JavaScript DOM manipulation and events – [Completed]
+- TOP JavaScript arrays and loops exercises – Completed
+- TOP JavaScript DOM manipulation and events – Completed
 
 ## Key Learnings
 ### Array Methods
 - filter(): Creates new array with elements passing test function
 - reduce(): Iterates through array and accumulates a single return value
-  - Requires accumulator and currentValue parameters
-  - Optional initialValue (recommended)
+  - Requires **accumulator** and **currentValue** parameters
+  - Optional **initialValue** (recommended)
   - Useful for summing, transforming, filtering, counting data
 - Rest parameters (...args): Handles indefinite arguments as array
 
@@ -27,7 +27,7 @@
   - Capturing: Intercepts event
   - Target: Reaches intended element
   - Bubbling: Propagates up DOM tree
-- Best practice: Use addEventListener()
+- Best practice: Use **addEventListener()**
 - Event object
   - Available only during event listener execution
   - Auto-destroyed after event completion
