--- a/weekly-reviews/Jan/2025-Jan-W1.md
+++ b/weekly-reviews/Jan/2025-Jan-W1.md
@@ -1,8 +1,8 @@
 # 2025 January Week 1
 
 ## Weekly Objectives Review
-- TOP CSS exercises – [Completed]
-- TOP CSS project – [Completed]
+- TOP CSS exercises – Completed
+- TOP CSS project – Completed
 
 ## Key Learnings
 ### CSS Selectors
