--- a/weekly-reviews/Jan/2025-Jan-W2.md
+++ b/weekly-reviews/Jan/2025-Jan-W2.md
@@ -1,13 +1,13 @@
 # 2025 January Week 2
 
 ## Weekly Objectives Review
-- TOP JavaScript variables and operators – [Completed]
-- TOP JavaScript data types and conditionals – [Completed]
+- TOP JavaScript variables and operators – Completed
+- TOP JavaScript data types and conditionals – Completed
 
 ## Key Learnings
 ### Variables and Data Types
-- Practiced variable declarations using let and const
-- Understood immutability with const
+- Practiced variable declarations using **let** and **const**
+- Understood immutability with **const**
 - Explored primitive data types
 
 ### Conditionals
