--- a/weekly-reviews/Jan/2025-Jan-W3.md
+++ b/weekly-reviews/Jan/2025-Jan-W3.md
@@ -1,8 +1,8 @@
 # 2025 January Week 3
 
 ## Weekly Objectives Review
-- TOP JavaScript developer tools – [Completed]
-- TOP JavaScript function basics – [In progress]
+- TOP JavaScript developer tools – Completed
+- TOP JavaScript function basics – In progress
 
 ## Key Learnings
 ### Chrome DevTools
