--- a/weekly-reviews/Jan/2025-Jan-W4.md
+++ b/weekly-reviews/Jan/2025-Jan-W4.md
@@ -1,8 +1,8 @@
 # 2025 January Week 4
 
 ## Weekly Objectives Review
-- TOP JavaScript function basics – [Completed]
-- TOP JavaScript project – [In progress]
+- TOP JavaScript function basics – Completed
+- TOP JavaScript project – In progress
 
 ## Key Learnings
 ### Call Stack
