--- a/weekly-reviews/Jan/2025-Jan-W2.md
+++ b/weekly-reviews/Jan/2025-Jan-W2.md
@@ -6,8 +6,8 @@
 
 ## Key Learnings
 ### Variables and Data Types
-- Practiced variable declarations using **let** and **const**
-- Understood immutability with **const**
+- Practiced variable declarations using `let` and `const`
+- Understood immutability with `const`
 - Explored primitive data types
 
 ### Conditionals
