--- a/weekly-reviews/Jan/2025-Jan-W1.md
+++ b/weekly-reviews/Jan/2025-Jan-W1.md
@@ -7,8 +7,8 @@
 ## Key Learnings
 ### CSS Selectors
 - Enhanced understanding of selectors
-  - Chain selectors (e.g., .class1.class2) target elements with all specified classes
-  - Descendant combinators (e.g., .parent .child) target nested elements
+  - Chain selectors (e.g., `.class1.class2`) target elements with all specified classes
+  - Descendant combinators (e.g., `.parent .child`) target nested elements
 
 ### Flexbox Mode
 - Clarified axis-based alignment concepts
