--- a/weekly-reviews/Jan/2025-Jan-W2.md
+++ b/weekly-reviews/Jan/2025-Jan-W2.md
@@ -17,12 +17,19 @@
 
 ### Operators
 - Common mistake
-  - Incorrect: if (x === 5 || 7 || 10)
-  - Correct: if (x === 5 || x === 7 || x === 10)
+
+```javascript
+// Incorrect
+if (x === 5 || 7 || 10)
+
+// Correct
+if (x === 5 || x === 7 || x === 10)
+```
+
 - Logical operators
-  - OR (||): Returns first truthy value
-  - AND (&&): Returns first falsy value
-  - NOT (!): Highest precedence
+  - OR `||`: Returns first truthy value
+  - AND `&&`: Returns first falsy value
+  - NOT `!`: Highest precedence
 
 ## Next Week's Focus
 - Function basics
