--- a/weekly-reviews/Jan/2025-Jan-W3.md
+++ b/weekly-reviews/Jan/2025-Jan-W3.md
@@ -18,10 +18,25 @@
 - Core concepts
   - Declaration: Declared as separate statements, available before definition
   - Expression: Created inside expressions or another syntax construct, only available after definition
+
+```javascript
+// Declaration
+greet();  // Works
+function greet() {
+    console.log('Hi');
+}
+
+// Expression
+greet();  // Error
+const greet = function() {
+    console.log('Hi');
+};
+```
+
 - Scope & best practices 
   - Local variables: Accessible only within functions
   - Global variables: Available everywhere, use minimally
-  - Naming: Start with action verb (e.g., getUser, calculateTotal)
+  - Naming: Start with action verb (e.g., `getUser`, `calculateTotal`)
   - Single responsibility: One function, one task
 
 ## Next Week's Focus
