--- a/weekly-reviews/Feb/2025-Feb-W1.md
+++ b/weekly-reviews/Feb/2025-Feb-W1.md
@@ -8,20 +8,20 @@
 ## Key Learnings
 ### Arrays
 - Arrays store ordered collections of various data types
-- **const** arrays can be modified (push, pop, etc.) but not reassigned
+- `const` arrays can be modified (push, pop, etc.) but not reassigned
 - Zero-based indexing for element access
 
 ### Loops
 - Loop types
-  - for...of: Array iteration without index needs
-  - Standard for: Counter-based iteration
-  - while: Condition checked before execution
-  - do...while: Guarantees at least one execution
+  - `for...of`: Array iteration without index needs
+  - Standard `for`: Counter-based iteration
+  - `while`: Condition checked before execution
+  - `do...while`: Guarantees at least one execution
 - Flow control
-  - **break** exits loop completely
-  - **continue** skips to next iteration
+  - `break` exits loop completely
+  - `continue` skips to next iteration
 - Increment operators
-  - Post-increment **i++** uses then increases, pre-increment **++i** increases then uses
+  - Post-increment `i++` uses then increases, pre-increment `++i` increases then uses
   - Ensure proper increment/decrement conditions to avoid infinite loops
 
 ### Clean Code Principles
@@ -36,8 +36,8 @@
   - Implement solution
   - Test functionality
 - Scope management through local variables
-- String capitalization: string.charAt(0).toUpperCase() + string.slice(1)
-- Random number generation: Math.floor(Math.random() * n)
+- String capitalization: `string.charAt(0).toUpperCase() + string.slice(1)`
+- Random number generation: `Math.floor(Math.random() * n)`
 
 ## Next Week's Focus
 - DOM manipulation and events
