--- a/weekly-reviews/Feb/2025-Feb-W2.md
+++ b/weekly-reviews/Feb/2025-Feb-W2.md
@@ -6,28 +6,28 @@
 
 ## Key Learnings
 ### Array Methods
-- filter(): Creates new array with elements passing test function
-- reduce(): Iterates through array and accumulates a single return value
-  - Requires **accumulator** and **currentValue** parameters
-  - Optional **initialValue** (recommended)
+- `filter()`: Creates new array with elements passing test function
+- `reduce()`: Iterates through array and accumulates a single return value
+  - Requires `accumulator` and `currentValue` parameters
+  - Optional `initialValue` (recommended)
   - Useful for summing, transforming, filtering, counting data
-- Rest parameters (...args): Handles indefinite arguments as array
+- Rest parameters `...args`: Handles indefinite arguments as array
 
 ### DOM Manipulation
 - Tree-like structure representing webpage contents
 - Key methods
-  - querySelector(selector)
-  - createElement(tagName)
-  - appendChild(childNode)
-  - removeChild(child)
-  - setAttribute()
+  - `querySelector(selector)`
+  - `createElement(tagName)`
+  - `appendChild(childNode)`
+  - `removeChild(child)`
+  - `setAttribute()`
 
 ### Event Handling
 - Event flow phases
   - Capturing: Intercepts event
   - Target: Reaches intended element
   - Bubbling: Propagates up DOM tree
-- Best practice: Use **addEventListener()**
+- Best practice: Use `addEventListener()`
 - Event object
   - Available only during event listener execution
   - Auto-destroyed after event completion
