--- a/weekly-reviews/Feb/2025-Feb-W3.md
+++ b/weekly-reviews/Feb/2025-Feb-W3.md
@@ -8,11 +8,11 @@
 ## Key Learnings
 ### Project Implementation
 - Built Etch-A-Sketch grid using flexbox
-  - aspect-ratio: 1 / 1 for squares
-  - calc(100% / num) for equal division
+  - `aspect-ratio: 1 / 1` for squares
+  - `calc(100% / num)` for equal division
 - DOM manipulation
-  - parseInt() for string to integer conversion
-  - innerHTML for element content management
+  - `parseInt()` for string to integer conversion
+  - `innerHTML` for element content management
 - Function closures
   - Functions retain access to parent scope and "remember" environment
   - Implemented 10% opacity increment per interaction
@@ -22,19 +22,19 @@
   - Keys: Strings/symbols
   - Values: Any type
 - Property value access
-  - Dot notation: object.key
-  - Bracket notation: object["key"]
-  - **undefined** for non-existent properties
-  - **in** operator: "key" in object for property checks
+  - Dot notation: `object.key`
+  - Bracket notation: `object["key"]`
+  - `undefined` for non-existent properties
+  - `in` operator: "key" `in` object for property checks
 - Object iteration
-  - for...in loops through properties
+  - `for...in` loops through properties
   - Integer properties sort numerically
   - Other properties maintain creation order
 - Constructors
   - Creates multiple object instances
   - Capital letter naming convention
-  - **new** keyword creates object
-  - Binds **this** to new instance
+  - `new` keyword creates object
+  - Binds `this` to new instance
 
 ## Next Week's Focus
 - Third JavaScript project
