--- a/weekly-reviews/Feb/2025-Feb-W3.md
+++ b/weekly-reviews/Feb/2025-Feb-W3.md
@@ -23,9 +23,9 @@
   - Values: Any type
 - Property value access
   - Dot notation: `object.key`
-  - Bracket notation: `object["key"]`
+  - Bracket notation: `object['key']`
   - `undefined` for non-existent properties
-  - `in` operator: "key" `in` object for property checks
+  - `in` operator for property checks
 - Object iteration
   - `for...in` loops through properties
   - Integer properties sort numerically
