--- a/weekly-reviews/Feb/2025-Feb-W4.md
+++ b/weekly-reviews/Feb/2025-Feb-W4.md
@@ -1,46 +1,33 @@
 # 2025 February Week 4
 
 ## Weekly Objectives Review
-- TOP second JavaScript project – Completed
-- TOP JavaScript Object basics – Completed
-- TOP JavaScript Object basics assignments – In progress
+- TOP JavaScript Object basics assignments – Completed
 
 ## Key Learnings
-### Project Implementation
-- Built Etch-A-Sketch grid using flexbox
-  - `aspect-ratio: 1 / 1` for squares
-  - `calc(100% / num)` for equal division
-- DOM manipulation
-  - `parseInt()` for string to integer conversion
-  - `innerHTML` for element content management
-- Function closures
-  - Functions retain access to parent scope and "remember" environment
-  - Implemented 10% opacity increment per interaction
+### Object Assignment
+- Array search methods
+  - `arr.indexOf(item, from)`: Returns first index of item or -1 if not found
+  - `arr.includes(item, from)`: Returns boolean indicating presence
+  - `arr.find(fn)`: Returns first element passing test function
+  - `arr.findIndex(fn)`: Returns index of first element passing test function
+- Array sorting
+  - Default `sort()` converts elements to strings
+  - Custom sorting requires comparison function: `arr.sort((a, b) => a - b)`
+- Unary plus `+` converts strings to numbers (works for integers and decimals)
+- Function parameters must be valid identifiers (no dot notation in parameter names)
 
-### Object Fundamentals
-- Collections of key-value pairs
-  - Keys: Strings/symbols
-  - Values: Any type
-- Property value access
-  - Dot notation: `object.key`
-  - Bracket notation: `object['key']`
-  - `undefined` for non-existent properties
-  - `in` operator for property checks
-- Object iteration
-  - `for...in` loops through properties
-  - Integer properties sort numerically
-  - Other properties maintain creation order
-- Constructors
-  - Creates multiple object instances
-  - Capital letter naming convention
-  - `new` keyword creates object
-  - Binds `this` to new instance
+### Gemini API
+- API key authentication for accessing Gemini capabilities
+- Tested functionalities: text generation, document understanding, code execution
+- Many-Shot In-Context Learning: LLMs learn from hundreds of examples in prompts with reinforced and unsupervised ICL techniques to address the need for extensive human data
+- Generation parameters
+  - Temperature: Controls randomness (low = predictable, high = creative)
+  - Top_p (nucleus sampling): Determines word selection diversity by limiting probability distribution
 
 ## Next Week's Focus
-- Third JavaScript project
 - Intermediate HTML and CSS
 
 ## Resources Used
 - TOP course
-- MDN Web Docs
 - JavaScript.info
+- Gemini API docs
