Update weekly review

--- a/weekly-reviews/Feb/2025-Feb-W3.md
+++ b/weekly-reviews/Feb/2025-Feb-W3.md
@@ -2,8 +2,8 @@
 
 ## Weekly Objectives Review
 - TOP second JavaScript project – Completed
-- TOP JavaScript Object basics – Completed
-- TOP JavaScript Object basics assignments – In progress
+- TOP JavaScript object basics – Completed
+- TOP JavaScript object assignment – In progress
 
 ## Key Learnings
 ### Project Implementation
