--- a/weekly-reviews/Feb/2025-Feb-W4.md
+++ b/weekly-reviews/Feb/2025-Feb-W4.md
@@ -1,15 +1,15 @@
 # 2025 February Week 4
 
 ## Weekly Objectives Review
-- TOP JavaScript Object basics assignments – Completed
+- TOP JavaScript object assignment – Completed
 
 ## Key Learnings
 ### Object Assignment
 - Array search methods
-  - `arr.indexOf(item, from)`: Returns first index of item or -1 if not found
-  - `arr.includes(item, from)`: Returns boolean indicating presence
-  - `arr.find(fn)`: Returns first element passing test function
-  - `arr.findIndex(fn)`: Returns index of first element passing test function
+  - `arr.indexOf(item)`: Returns index of first item or -1 if not found
+  - `arr.includes(item)`: Returns boolean indicating presence
+  - `arr.find(fn)`: Returns first item passing test function
+  - `arr.findIndex(fn)`: Returns index of first item passing test function
 - Array sorting
   - Default `sort()` converts elements to strings
   - Custom sorting requires comparison function: `arr.sort((a, b) => a - b)`
@@ -19,7 +19,7 @@
 ### Gemini API
 - API key authentication for accessing Gemini capabilities
 - Tested functionalities: text generation, document understanding, code execution
-- Many-Shot In-Context Learning: LLMs learn from hundreds of examples in prompts with reinforced and unsupervised ICL techniques to address the need for extensive human data
+- Many-Shot In-Context Learning: A technique where LLMs learn from hundreds of examples in prompts, using reinforced and unsupervised ICL methods to address the need for extensive human data
 - Generation parameters
   - Temperature: Controls randomness (low = predictable, high = creative)
   - Top_p (nucleus sampling): Determines word selection diversity by limiting probability distribution
