Update weekly review

--- a/weekly-reviews/Mar/2025-Mar-W1.md
+++ b/weekly-reviews/Mar/2025-Mar-W1.md
@@ -1,33 +1,77 @@
 # 2025 March Week 1
 
 ## Weekly Objectives Review
-- TOP JavaScript object assignment – Completed
+- TOP Intermediate HTML concepts – Completed
 
 ## Key Learnings
-### Object Assignment
-- Array search methods
-  - `arr.indexOf(item)`: Returns index of first item or -1 if not found
-  - `arr.includes(item)`: Returns boolean indicating presence
-  - `arr.find(fn)`: Returns first item passing test function
-  - `arr.findIndex(fn)`: Returns index of first item passing test function
-- Array sorting
-  - Default `sort()` converts elements to strings
-  - Custom sorting requires comparison function: `arr.sort((a, b) => a - b)`
-- Unary plus `+` converts strings to numbers (works for integers and decimals)
-- Function parameters must be valid identifiers (no dot notation in parameter names)
+### Emmet
+- VS Code plugin for efficient HTML/CSS writing using shortcuts
+- Key shortcuts
+  - Classes: `.classname`
+  - IDs: `#idname`
+  - Attributes: `[attr="value"]`
+  - Text content: `{content}`
+  - Numbering: `{item $}`
+  - Multiplication: `li*5`
+  - Nesting: `>`
+  - Siblings: `+`
+  - Climb up: `^`
+- Example: `(header>nav)+main+footer` = `header>nav^main+footer`
 
-### Gemini API
-- API key authentication for accessing Gemini capabilities
-- Tested functionalities: text generation, document understanding, code execution
-- Many-Shot In-Context Learning: A technique where LLMs learn from hundreds of examples in prompts, using reinforced and unsupervised ICL methods to address the need for extensive human data
-- Generation parameters
-  - Temperature: Controls randomness (low = predictable, high = creative)
-  - Top_p (nucleus sampling): Determines word selection diversity by limiting probability distribution
+### SVG
+- Scalable Vector Graphics use mathematical formulas rather than pixel grids
+- XML-based format that integrates well with HTML
+- Ideal for simple graphics, logos, and icons; inefficient for complex images
+- Key attributes
+  - `xmlns`: XML namespace declaration
+  - `viewBox`: Defines bounds, aspect ratio, and origin
+  - `class/id`: Function like HTML for CSS/JS targeting
+
+#### SVG Embedding
+- Linked: `<img>` or CSS `background-image`
+  - Cleaner code, not accessible to manipulation
+  - Preferred for static graphics
+- Inline: SVG code directly in HTML
+  - Enables dynamic manipulation via CSS/JS
+  - Use when interaction or animation needed
+
+### Tables
+- Purpose: Presenting tabular data (not page layout)
+- Avoiding tables for layout improves:
+ - Accessibility for screen readers
+ - Code readability and maintainability
+ - Responsive design
+
+#### Table Structure
+- Basic elements
+  - `<table>`: Container
+  - `<tr>`: Table row
+  - `<td>`: Table data cell
+  - `<th>`: Table header cell
+- Spanning cells
+  - `colspan="n"`: Spans multiple columns
+  - `rowspan="n"`: Spans multiple rows
+
+#### Table Accessibility
+- `<caption>`: Table description
+- Structural elements
+  - `<thead>`: Header section
+  - `<tbody>`: Main content
+  - `<tfoot>`: Footer section
+- `scope` attribute on `<th>`
+  - `scope="col"`: Column header
+  - `scope="row"`: Row header
+  - `scope="colgroup"`: Multiple column header
+  - `scope="rowgroup"`: Multiple row header
+- ID/headers association
+  - `id` on header cells
+  - `headers` on data cells referencing header IDs
 
 ## Next Week's Focus
-- Intermediate HTML and CSS
+- Intermediate CSS concepts
 
 ## Resources Used
 - TOP course
-- JavaScript.info
-- Gemini API docs
+- Emmet documentation
+- CSS Tricks
+- MDN Web Docs
