--- a/weekly-reviews/Mar/2025-Mar-W1.md
+++ b/weekly-reviews/Mar/2025-Mar-W1.md
@@ -6,7 +6,7 @@
 ## Key Learnings
 ### Emmet
 - VS Code plugin for efficient HTML/CSS writing using shortcuts
-- Key shortcuts
+- Shortcuts
   - Classes: `.classname`
   - IDs: `#idname`
   - Attributes: `[attr="value"]`
@@ -22,7 +22,7 @@
 - Scalable Vector Graphics use mathematical formulas rather than pixel grids
 - XML-based format that integrates well with HTML
 - Ideal for simple graphics, logos, and icons; inefficient for complex images
-- Key attributes
+- Attributes
   - `xmlns`: XML namespace declaration
   - `viewBox`: Defines bounds, aspect ratio, and origin
   - `class/id`: Function like HTML for CSS/JS targeting
@@ -38,9 +38,9 @@
 ### Tables
 - Purpose: Presenting tabular data (not page layout)
 - Avoiding tables for layout improves:
- - Accessibility for screen readers
- - Code readability and maintainability
- - Responsive design
+  - Accessibility for screen readers
+  - Code readability and maintainability
+  - Responsive design
 
 #### Table Structure
 - Basic elements
