Add weekly review

--- a/weekly-reviews/Mar/2025-Mar-W2.md
+++ b/weekly-reviews/Mar/2025-Mar-W2.md
@@ -4,7 +4,7 @@
 - TOP Intermediate CSS concepts – In progress
 
 ## Key Learnings
-### Default Styles
+### Styles
 - User-agent stylesheets: Browser-specific default styling
 - Normalize: Fixes cross-browser inconsistencies while preserving useful defaults
 - Reset: Removes all default styling for a blank slate
@@ -24,9 +24,9 @@
   - `~` General sibling
 - Pseudo-classes (single colon) select elements in specific states
   - Link: `:link`, `:visited`
-  - User interaction: `:focus`, `:hover`, `:active
+  - User interaction: `:focus`, `:hover`, `:active`
   - Structural: `:root`, `:first-child`, `:last-child`, `:only-child`, `:empty`, `:first-of-type`, `:last-of-type`, `:only-of-type`
-- Pseudo-elements (double colon) targets elements not in markup
+- Pseudo-elements (double colon) target elements not in markup
   - Text: `::first-letter`, `::first-line`, `::marker`
   - Generated content: `::before`, `::after`
   - Fragment: `::selection`
@@ -44,7 +44,7 @@
 
 ## Resources Used
 - TOP course
-- CSS Tricks
-- MDN Web Docs
 - Josh W. Comeau's website
 - Web.dev
+- CSS Tricks
+- MDN Web Docs
