Update weekly review

--- a/weekly-reviews/Mar/2025-Mar-W3.md
+++ b/weekly-reviews/Mar/2025-Mar-W3.md
@@ -12,13 +12,13 @@
 - VS Code integration: Implement commands and understand UI components
 
 ### Portfolio Website
-- Security practices: `rel="noopener"` for external links to prevent tab nabbing
+- Security practice: `rel="noopener"` for external links to prevent tab nabbing
 - User experience
   - Section-based navigation with anchor IDs
   - Structured content hierarchy
 - CSS techniques
   - CSS reset and base styles
-  - CSS variables for consistent theming
+  - `var()` function to create variables for consistent theming
   - Responsive font size with `clamp()` formula
   - Fluid spacing using viewport-relative units
 
@@ -27,5 +27,5 @@
 
 ## Resources Used
 - Josh W. Comeau's website
-- MDN Web Docs
+- CSS Tricks
 - Gemini API docs
