Update weekly review

--- a/weekly-reviews/Mar/2025-Mar-W3.md
+++ b/weekly-reviews/Mar/2025-Mar-W3.md
@@ -1,8 +1,8 @@
 # 2025 March Week 3
 
 ## Weekly Objectives Review
-- GSoC proposal - Completed
-- Portfolio website - In progress
+- GSoC proposal – Completed
+- Portfolio website – In progress
 - TOP Intermediate CSS concepts – In progress
 
 ## Key Learnings
