Add resources used

--- a/weekly-reviews/Mar/2025-Mar-W4.md
+++ b/weekly-reviews/Mar/2025-Mar-W4.md
@@ -15,13 +15,13 @@
 - Fixed: Positioned relative to viewport
   - Removed from normal document flow
   - Useful for navigation bars, chat widgets
-- Sticky: Hybrid - normal flow until scroll threshold, then fixed
+- Sticky: Hybrid - normal position until scroll threshold, then fixed
   - Maintains original space in document
 
 ### CSS Functions
 - `calc()`: Runtime calculations with mixed units
   - Supports nesting: `calc(calc() - calc())`
-- `min()`/`max()`: Value boundaries
+- `min()` / `max()`: Value boundaries
   - `min()`: Sets maximum allowed value
   - `max()`: Sets minimum allowed value
 - `clamp()`: Fluid responsive values
@@ -31,7 +31,7 @@
 - Declaration: `--property-name: value;`
 - Usage: `var(--property-name, fallback)`
 - Scope: Follows cascade, defined on elements and their descendants
-  - `:root`selector makes properties globally available
+  - `:root` selector makes properties globally available
 - Pattern: Split properties (like HSL colors) into components for targeted updates
 
 ### Browser Compatibility
@@ -44,6 +44,7 @@
 - Grid
 
 ## Resources Used
-- Josh W. Comeau's website
+- TOP course
 - CSS Tricks
-- Gemini API docs
+- MDN Web Docs
+- Web.dev
