--- a/monthly-reviews/2025-Feb.md
+++ b/monthly-reviews/2025-Feb.md
@@ -20,7 +20,6 @@
 ## Next Month Planning
 - Focus areas
   - Intermediate HTML and CSS
-  - Advanced JavaScript
   - IDE extensions and API integration knowledge
 - Project targets
-  - Portfolio site
+  - Portfolio website
