--- a/weekly-reviews/Apr/2025-Apr-W1.md
+++ b/weekly-reviews/Apr/2025-Apr-W1.md
@@ -1,8 +1,8 @@
-# 2025 March Week 4
+# 2025 April Week 1
 
 ## Weekly Objectives Review
-- TOP intermediate CSS concepts – Completed
-- TOP HTML forms – In progress
+- TOP forms – Completed
+- TOP forms assignment – In progress
 
 ## Key Learnings
 ### Positioning Types
@@ -40,11 +40,10 @@
 - iOS browsers use WebKit regardless of brand name
 
 ## Next Week's Focus
-- HTML forms
-- CSS grid
+- Forms
+- Grid
 
 ## Resources Used
 - TOP course
-- CSS Tricks
 - MDN Web Docs
-- Web.dev
+- SitePoint
