--- a/weekly-reviews/Mar/2025-Mar-W1.md
+++ b/weekly-reviews/Mar/2025-Mar-W1.md
@@ -1,7 +1,7 @@
 # 2025 March Week 1
 
 ## Weekly Objectives Review
-- TOP Intermediate HTML concepts – Completed
+- TOP intermediate HTML concepts – Completed
 
 ## Key Learnings
 ### Emmet
