--- a/weekly-reviews/Mar/2025-Mar-W2.md
+++ b/weekly-reviews/Mar/2025-Mar-W2.md
@@ -1,7 +1,7 @@
 # 2025 March Week 2
 
 ## Weekly Objectives Review
-- TOP Intermediate CSS concepts – In progress
+- TOP intermediate CSS concepts – In progress
 
 ## Key Learnings
 ### Styles
