--- a/weekly-reviews/Mar/2025-Mar-W3.md
+++ b/weekly-reviews/Mar/2025-Mar-W3.md
@@ -3,7 +3,7 @@
 ## Weekly Objectives Review
 - GSoC proposal – Completed
 - Portfolio website – In progress
-- TOP Intermediate CSS concepts – In progress
+- TOP intermediate CSS concepts – In progress
 
 ## Key Learnings
 ### AI Coding Extension
