Add weekly review

--- a/weekly-reviews/Apr/2025-Apr-W1.md
+++ b/weekly-reviews/Apr/2025-Apr-W1.md
@@ -1,47 +1,39 @@
 # 2025 April Week 1
 
 ## Weekly Objectives Review
-- TOP forms – Completed
-- TOP forms assignment – In progress
+- TOP HTML forms – Completed
+- TOP HTML forms assignment – In progress
 
 ## Key Learnings
-### Positioning Types
-- Static: Default position in normal document flow
-- Relative: Offset from normal position while maintaining original space
-- Absolute: Positioned relative to nearest positioned ancestor (non-static)
-  - Creates containing block from ancestor's padding box
-  - Removed from normal document flow
-  - Use sparingly; prioritize flexbox/grid when possible
-- Fixed: Positioned relative to viewport
-  - Removed from normal document flow
-  - Useful for navigation bars, chat widgets
-- Sticky: Hybrid - normal position until scroll threshold, then fixed
-  - Maintains original space in document
+### Forms
+- Form elements
+  - `<form>` requires `action` (submission URL) and `method` (post/get) attributes
+  - Post: changing server data; Get: retrieving data
 
-### CSS Functions
-- `calc()`: Runtime calculations with mixed units
-  - Supports nesting: `calc(calc() - calc())`
-- `min()` / `max()`: Value boundaries
-  - `min()`: Sets maximum allowed value
-  - `max()`: Sets minimum allowed value
-- `clamp()`: Fluid responsive values
-  - Three parameters define value constraints: min, ideal, max
+### Form controls
+- Input elements function as "variables" sent to servers
+  - Required attributes: `name` (data reference), `type` (data format)
+  - Types include text, email, password, number, date
+  - Placeholder text provides input guidance
+  - Labels improve accessibility when linked via `for` attribute matching input `id`
+- Selection elements
+  - Dropdown menus:`<select>` with `<option>` elements, `optgroup` for grouping options
+  - Radio buttons: Same `name` attribute, single selection
+  - Checkboxes: Multiple selections
+  - Buttons: Types include submit (default), reset, generic, and image
+  - File pickers: `accept` attribute restricts acceptable file types
+- Organization
+  - `<fieldset>` groups related inputs
+  - `<legend>` provides group heading (should follow immediately after fieldset)
 
-### Custom Properties
-- Declaration: `--property-name: value;`
-- Usage: `var(--property-name, fallback)`
-- Scope: Follows cascade, defined on elements and their descendants
-  - `:root` selector makes properties globally available
-- Pattern: Split properties (like HSL colors) into components for targeted updates
-
-### Browser Compatibility
-- Rendering engines: Blink (Chrome/Edge), WebKit (Safari), Gecko (Firefox)
-- Test across browsers users are likely to use
-- iOS browsers use WebKit regardless of brand name
+### Form validation
+- Client-side and server-side validation are both necessary
+- Built-in validators: `required`, `minlength`, `maxlength`, `min`, `max`, `step`, `pattern`
+- Style validation states with `:valid`, `:invalid`, `:focus`, `:placeholder-shown`
 
 ## Next Week's Focus
-- Forms
-- Grid
+- HTML forms project
+- CSS grid
 
 ## Resources Used
 - TOP course
