Update weekly review

--- a/weekly-reviews/Apr/2025-Apr-W1.md
+++ b/weekly-reviews/Apr/2025-Apr-W1.md
@@ -17,14 +17,14 @@
   - Placeholder text provides input guidance
   - Labels improve accessibility when linked via `for` attribute matching input `id`
 - Selection elements
-  - Dropdown menus:`<select>` with `<option>` elements, `optgroup` for grouping options
+  - Dropdown menus: `<select>` with `<option>` elements, `optgroup` for grouping options
   - Radio buttons: Same `name` attribute, single selection
   - Checkboxes: Multiple selections
-  - Buttons: Types include submit (default), reset, generic, and image
+  - Buttons: Types include submit (default), reset, generic, image
   - File pickers: `accept` attribute restricts acceptable file types
 - Organization
   - `<fieldset>` groups related inputs
-  - `<legend>` provides group heading (should follow immediately after fieldset)
+  - `<legend>` provides group heading (should follow immediately after `<fieldset>`)
 
 ### Form validation
 - Client-side and server-side validation are both necessary
