Update weekly review

--- a/weekly-reviews/Apr/2025-Apr-W1.md
+++ b/weekly-reviews/Apr/2025-Apr-W1.md
@@ -10,7 +10,7 @@
   - `<form>` requires `action` (submission URL) and `method` (post/get) attributes
   - Post: changing server data; Get: retrieving data
 
-### Form controls
+### Form Controls
 - Input elements function as "variables" sent to servers
   - Required attributes: `name` (data reference), `type` (data format)
   - Types include text, email, password, number, date
@@ -26,7 +26,7 @@
   - `<fieldset>` groups related inputs
   - `<legend>` provides group heading (should follow immediately after `<fieldset>`)
 
-### Form validation
+### Form Validation
 - Client-side and server-side validation are both necessary
 - Built-in validators: `required`, `minlength`, `maxlength`, `min`, `max`, `step`, `pattern`
 - Style validation states with `:valid`, `:invalid`, `:focus`, `:placeholder-shown`
