Update weekly review

--- a/weekly-reviews/Apr/2025-Apr-W1.md
+++ b/weekly-reviews/Apr/2025-Apr-W1.md
@@ -2,7 +2,7 @@
 
 ## Weekly Objectives Review
 - TOP HTML forms – Completed
-- TOP HTML forms assignment – In progress
+- TOP HTML forms project – In progress
 
 ## Key Learnings
 ### Forms
