Update weekly review

--- a/weekly-reviews/Apr/2025-Apr-W2.md
+++ b/weekly-reviews/Apr/2025-Apr-W2.md
@@ -2,7 +2,7 @@
 
 ## Weekly Objectives Review
 - TOP HTML forms project – Completed
-- TOP CSS grid – In progress
+- TOP CSS Grid – Completed
 
 ## Key Learnings
 ### Grid Container Basics
@@ -44,8 +44,8 @@
 - `justify-content` / `align-content`: Align entire grid within container
 
 ## Next Week's Focus
-- CSS grid
-- CSS grid project
+- CSS Grid project
+- Intermediate JavaScript
 
 ## Resources Used
 - TOP course
