--- a/weekly-reviews/Jan/2025-Jan-W1.md
+++ b/weekly-reviews/Jan/2025-Jan-W1.md
@@ -14,7 +14,7 @@
 - Clarified axis-based alignment concepts
   - justify-content: Controls group alignment along primary axis
   - align-items: Positions individual items along cross axis
-- Created responsive layouts through flexbox exercises
+- Created responsive layouts through Flexbox exercises
 - Practiced layout patterns in CSS project
 
 ### Additional Skills
