--- a/weekly-reviews/Mar/2025-Mar-W4.md
+++ b/weekly-reviews/Mar/2025-Mar-W4.md
@@ -11,7 +11,7 @@
 - Absolute: Positioned relative to nearest positioned ancestor (non-static)
   - Creates containing block from ancestor's padding box
   - Removed from normal document flow
-  - Use sparingly; prioritize flexbox/grid when possible
+  - Use sparingly; prioritize Flexbox/Grid when possible
 - Fixed: Positioned relative to viewport
   - Removed from normal document flow
   - Useful for navigation bars, chat widgets
@@ -41,7 +41,6 @@
 
 ## Next Week's Focus
 - HTML forms
-- CSS grid
 
 ## Resources Used
 - TOP course
