Update weekly review

--- a/weekly-reviews/Apr/2025-Apr-W3.md
+++ b/weekly-reviews/Apr/2025-Apr-W3.md
@@ -1,15 +1,49 @@
 # 2025 April Week 3
 
 ## Weekly Objectives Review
-- TOP JavaScript constructors – In progress
+- TOP JavaScript objects and constructors – In progress
 
 ## Key Learnings
-### Grid Container Basics
+### The `This` Keyword
+- References the current object where code executes
+- In methods, refers to object the method was called on (before dot)
+- Value depends on how function is called, not where it's defined
+
+### Constructors
+- Functions called with `new` keyword to create objects
+- Named with capital letter (e.g., Person)
+- When executed with `new`:
+ - Creates new empty object
+ - Binds `this` to new object
+ - Executes constructor code
+ - Returns new object
+- Use `new.target` to verify function was called with `new`
+
+### Methods and Context
+- Methods lose `this` binding when called separately from object
+- Fix with `bind()`, arrow functions, or maintaining context
+- `call()` and `apply()` methods execute function with specified `this` value
+
+### Prototypes
+- Every object has a prototype it inherits from
+- Access with `Object.getPrototypeOf(obj)`
+- Modify with `Object.setPrototypeOf(obj, prototype)`
+- Place shared methods/properties on prototype to save memory
+- `obj.hasOwnProperty(prop)` checks if property exists on object itself
+
+### Prototypal Inheritance
+- All prototypes inherit from `Object.prototype` by default
+- Property lookup traverses prototype chain until found or reaches `null`
+- Methods work with current object even when inherited
+- `for...in` iterates over object's own and inherited properties
+- Object-specific state should be on instance, not prototype
 
 ## Next Week's Focus
 - JavaScript library project
-- Factory functions
+- Factory functions and module pattern
 
 ## Resources Used
 - TOP course
 - MDN Web Docs
+- Digital Ocean
+- JavaScript.Info
