--- a/weekly-reviews/Apr/2025-Apr-W3.md
+++ b/weekly-reviews/Apr/2025-Apr-W3.md
@@ -4,7 +4,7 @@
 - TOP JavaScript objects and constructors – In progress
 
 ## Key Learnings
-### The `This` Keyword
+### The `this` Keyword
 - References the current object where code executes
 - In methods, refers to object the method was called on (before dot)
 - Value depends on how function is called, not where it's defined
@@ -17,26 +17,31 @@
  - Binds `this` to new object
  - Executes constructor code
  - Returns new object
-- Use `new.target` to verify function was called with `new`
+- Use `new.target` to verify function was called as constructor
 
 ### Methods and Context
 - Methods lose `this` binding when called separately from object
-- Fix with `bind()`, arrow functions, or maintaining context
+- Use `bind()` to maintain correct `this` reference
 - `call()` and `apply()` methods execute function with specified `this` value
 
 ### Prototypes
 - Every object has a prototype it inherits from
+- Prototype properties/methods are shared among all instances
 - Access with `Object.getPrototypeOf(obj)`
 - Modify with `Object.setPrototypeOf(obj, prototype)`
-- Place shared methods/properties on prototype to save memory
 - `obj.hasOwnProperty(prop)` checks if property exists on object itself
 
 ### Prototypal Inheritance
 - All prototypes inherit from `Object.prototype` by default
-- Property lookup traverses prototype chain until found or reaches `null`
 - Methods work with current object even when inherited
-- `for...in` iterates over object's own and inherited properties
-- Object-specific state should be on instance, not prototype
+- Property lookup flow:
+  - JavaScript checks object itself first
+  - If not found, traverses prototype chain
+  - Returns `null` if reaches end of chain without finding property
+- Loop behavior:
+  - `for...in` includes inherited properties
+  - Other methods only work with object's own properties
+- Keep object-specific state in instance, shared behaviors in prototype
 
 ## Next Week's Focus
 - JavaScript library project
