--- a/weekly-reviews/Apr/2025-Apr-W3.md
+++ b/weekly-reviews/Apr/2025-Apr-W3.md
@@ -5,18 +5,18 @@
 
 ## Key Learnings
 ### The `this` Keyword
-- References the current object where code executes
-- In methods, refers to object the method was called on (before dot)
+- References current object where code executes
+- In methods, refers to object that method was called on (before dot)
 - Value depends on how function is called, not where it's defined
 
 ### Constructors
 - Functions called with `new` keyword to create objects
 - Named with capital letter (e.g., Person)
 - When executed with `new`:
- - Creates new empty object
- - Binds `this` to new object
- - Executes constructor code
- - Returns new object
+  - Creates new empty object
+  - Binds `this` to new object
+  - Executes constructor code
+  - Returns new object
 - Use `new.target` to verify function was called as constructor
 
 ### Methods and Context
