--- a/weekly-reviews/Apr/2025-Apr-W3.md
+++ b/weekly-reviews/Apr/2025-Apr-W3.md
@@ -1,7 +1,8 @@
 # 2025 April Week 3
 
 ## Weekly Objectives Review
-- TOP JavaScript objects and constructors – In progress
+- TOP JavaScript objects and constructors – Completed
+- TOP JavaScript library project – In progress
 
 ## Key Learnings
 ### The `this` Keyword
