--- a/weekly-reviews/Apr/2025-Apr-W4.md
+++ b/weekly-reviews/Apr/2025-Apr-W4.md
@@ -10,26 +10,26 @@
 - Added methods to prototype for read status toggling
 - Generated unique IDs with `crypto.randomUUID()`
 
-### DOM Manipulation
+#### DOM Manipulation
 - Created dynamic UI elements with `createElement` and template literals
 - Used event delegation for handling multiple button events
 - Managed modal dialogs with built-in `showModal()` and `close()` methods
 
-### Form Handling
+#### Form Handling
 - Captured form data using `FormData` and `Object.fromEntries()`
 - `preventDefault()` cancels default form submission
 - Implemented form validation with conditional logic
 
-### Data Management
+#### Data Management
 - Used array methods like `findIndex()` to locate objects
 - Updated UI state with data model changes
 
-### Accessibility Considerations
+#### Accessibility Considerations
 - `aria-live="polite"` for non-intrusive notifications
 - `aria-required="true"` for input field requirements
 - Help text for form field guidance
 
-### CSS Technique
+#### CSS Technique
 - Used CSS positioning to center modal dialog
 - Positions element at 50% of container, then offsets by 50% of element size
 ```
